# unhireable

./: .cursorrules  .dockerignore  .git-workflow.md  .gitignore  .pre-commit-config.yaml  .taurirc.json  ARCHITECTURE.md  CLEANUP_SUMMARY.md  CODEBASE_ANALYSIS.md  Dockerfile  EMAIL_EXTRACTION_EXPLANATION.md  FEATURES_COMPLETED.md  GEMMA_EVALUATION_REPORT.md  MAKE_IT_WORK.md  MVP.md  OPENCODE_SETUP.md  OPENCODE_TEST_RESULTS.md  PROGRESS.md  QUICK_START.md  README.md  README_SETUP.md  RUN_APP.md  STATUS_SUMMARY.md  SYSTEM_INVENTORY.md  TESTING_GUIDE.md  TEST_CORE_FEATURES.md  TEST_RESULTS.md  TODO.md  UI_INTEGRATION_STATUS.md  USAGE.md  USER_GUIDE.md  VERIFICATION_SUMMARY.md  co-evaluate.sh  co-scan.sh  integrate-career-ops.mjs  package-lock.json  package.json  project-ledger.yaml  tauri.config.js  test_llm_fix.js  (+3 more)
backend/: package.json  (+1 more)
src-tauri/: Cargo.toml  check_output.txt  check_output_2.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_auto_apply.rs  test_phase2_features.rs  test_real_form_fill.rs
src-tauri/migrations/: 0001_initial_schema.sql  0002_add_contacts_interviews_documents.sql  0003_add_activity_log.sql  0004_add_credentials.sql  0005_add_match_score.sql  0006_add_user_profile.sql  0007_add_job_snapshots.sql  0008_add_saved_searches.sql  0009_add_behavior_tracking.sql  0010_normalize_source_names.sql  0011_add_user_auth.sql  0012_add_application_channel.sql  0013_add_answer_cache.sql  0014_add_answer_patterns.sql
src-tauri/migrations/postgres/: 0001_initial_schema.sql  0002_add_contacts_interviews_documents.sql  0003_add_activity_log.sql  0004_add_credentials.sql  0005_add_match_score.sql  0006_add_user_profile.sql  0007_add_job_snapshots.sql  0008_add_saved_searches.sql  0009_add_behavior_tracking.sql  0010_normalize_source_names.sql  0011_add_user_auth.sql
src-tauri/personas/: atlas_cover_letter.md  atlas_profile.json  atlas_resume.md  dauren_profile.json  user_profile.json
src-tauri/src/: cache.rs  channel.rs  error.rs  events.rs  flow_engine.rs  lib.rs  logging.rs  main.rs  metrics.rs  migration.rs  pinchtab.rs  queue.rs  scraper_queue.rs  security.rs  session.rs  test_utils.rs  vault.rs  web_server.rs
src-tauri/src/applicator/: apply_mode.rs  ats_api.rs  ats_detector.rs  captcha_solver.rs  form_filler.rs  mod.rs  reliability.rs  retry.rs  templates.rs  test_endpoint.rs  verification.rs  workflow.rs
src-tauri/src/automation/: apply_queue.rs  autopilot.rs  bridge.rs  config.rs  email_monitor.rs  follow_up.rs  mod.rs  orchestrator.rs  pipeline.rs  scheduler.rs  status.rs
src-tauri/src/commands/: applications.rs  automation.rs  documents.rs  entities.rs  jobs.rs  matching.rs  mod.rs  notifications.rs  persona.rs  scheduler.rs  system.rs  testing.rs  user.rs
src-tauri/src/db/: mod.rs  models.rs  postgres.rs  queries.rs
src-tauri/src/deduplication/: fuzzy_matcher.rs  merger.rs  mod.rs
src-tauri/src/filtering/: mod.rs  questionnaire.rs  smart_filter.rs
src-tauri/src/generator/: ai_integration.rs  ats_optimizer.rs  bulk_generator.rs  cache.rs  cover_letter.rs  docx_export.rs  event_handler.rs  mod.rs  multi_language.rs  multi_provider_ai.rs  pdf_export.rs  quality_scorer.rs  queue_processor.rs  resume.rs  template_marketplace.rs  templates.rs  version_control.rs
src-tauri/src/insights/: mod.rs
src-tauri/src/intelligence/: brain.rs  client.rs  event_handler.rs  mod.rs  models.rs
src-tauri/src/matching/: job_matcher.rs  mod.rs  skills_analyzer.rs
src-tauri/src/notifications/: desktop.rs  email.rs  email_extractor.rs  gmail.rs  mod.rs  templates.rs
src-tauri/src/persona/: mod.rs
src-tauri/src/recommendations/: behavior_tracker.rs  engine.rs  mod.rs  similarity.rs
src-tauri/src/resume_analyzer/: analyzer.rs  mod.rs  ocr.rs  parser.rs
src-tauri/src/scheduler/: job_scheduler.rs  mod.rs
src-tauri/src/scraper/: adzuna.rs  arbeitnow.rs  browser.rs  config.rs  dice.rs  error_handling.rs  findwork.rs  firecrawl.rs  glassdoor.rs  greenhouse_board.rs  hackernews.rs  hh_kz.rs  himalayas.rs  indeed.rs  job_enricher.rs  jobicy.rs  jooble.rs  lever_greenhouse.rs  linkedin.rs  mod.rs  remote_co.rs  remote_ok.rs  remotive.rs  site_configs.toml  source_normalizer.rs  stack_overflow.rs  themuse.rs  unified_scraper.rs  web3career.rs  wellfound.rs  work_at_startup.rs  wwr.rs  ziprecruiter.rs
src-tauri/tests/: auto_apply_test.rs  db_jobs_test.rs  document_generation_test.rs  end_to_end_test.rs  integration_test.rs  scraper_integration_test.rs  security_test.rs  test_doc_gen.rs  utils.rs  web_server_test.rs
(+539 files in other folders)
