[package]
name = "jobez"
version = "0.1.0"
description = "Unhireable - Neural Career System"
authors = ["You"]
edition = "2021"

[lib]
name = "jobez_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web scraping
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = "0.13"
urlencoding = "2.1"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"

# Browser automation (optional - for headless Chrome)
# headless_chrome = { version = "0.9", optional = true }

# Configuration
config = "0.14"

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# File system operations
walkdir = "2.3"
dirs = "5.0"

# Testing
mockall = "0.12"

# Document Generation
handlebars = "4.0"
serde_yaml = "0.9"

# PDF Generation
printpdf = "0.7"

# AI Integration (tokio already included above)

# Email Notifications
lettre = { version = "0.11", features = ["smtp-transport", "native-tls"] }

[dev-dependencies]
tempfile = "3.8"
mockito = "0.31"
