[package]
name = "unhireable"
version = "0.1.0"
description = "Unhireable - Neural Career System"
authors = ["You"]
edition = "2021"
default-run = "unhireable"

[lib]
name = "unhireable_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
# sqlx temporarily removed due to libsqlite3-sys version conflict with rusqlite
# To re-enable PostgreSQL support, use a compatible version or separate workspace
# sqlx = { version = "0.7", optional = true, default-features = false, features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

lazy_static = "1.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web server (REST API)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Web scraping and HTTP client
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
scraper = "0.13"
urlencoding = "2.1"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
once_cell = "1.19"

# Browser automation (Rust-native via Chrome DevTools)
headless_chrome = "0.9"


# Command line interface
clap = { version = "4.0", features = ["derive"] }

# File system operations
walkdir = "2.3"
dirs = "5.0"
tempfile = "3.8"
which = "6.0"

# Testing
mockall = "0.12"

# Document Generation
handlebars = "4.0"
serde_yaml = "0.9"

# PDF Generation
printpdf = "0.7"
# PDF Parsing
lopdf = "0.32"
# DOCX Generation
docx-rs = "0.4"

# AI Integration (tokio already included above)

# Email Notifications
lettre = { version = "0.11", features = ["smtp-transport", "native-tls"] }
base64 = "0.22"

# IMAP for email monitoring
imap = "3.0.0-alpha.15"
native-tls = "0.2"
mailparse = "0.14"

# Security & Cryptography
sha2 = "0.10"
url = "2.5"
# OS keychain for secure credential storage (Keychain/Credential Manager/Secret Service)
keyring = "3"

async-trait = "0.1.89"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"

[dev-dependencies]
http-body-util = "0.1.3"
mockito = "0.31"
tower = "0.5.3"
